# prosidy

./: .drone.yml  .gitignore  .jenkins  CHANGELOG  CHANGELOG.md  README.pro  cabal.project  flake.nix  hie.yaml  prosidy.cabal
.github/workflows/: test.hs  test.yml
configurations/: ghc-8.10.project  ghc-9.0.project  ghc-9.2.project  ghc-9.4.project
data/golden/comment/: output.json
data/golden/empty-document/: output.json
data/golden/gamut/: output.json
data/golden/invalid-utf8/: output.json
data/golden/line-break/: output.json
data/golden/shebang/: output.json
doc/: index.pro  specification.pro
doc/res/: manual.css  manual.js
kate/: prosidy.xml
nix/: OneTuple-0.4.1.nix  base-compat-0.13.0.nix  base-compat-batteries-0.13.0.nix  default.nix  foldable1-classes-compat-0.1.nix  nixpkgs.nix  quickcheck-instances-0.3.29.nix
scripts/: documentation-coverage  format  release
src/: Prosidy.hs
src/Prosidy/: Compat.hs  Optics.hs  Parse.hs  Source.hs  Types.hs
src/Prosidy/Internal/: Classes.hs  JSON.hs
src/Prosidy/Optics/: Internal.hs  Source.hs  Types.hs
src/Prosidy/Source/: LineMap.hs  Units.hs
src/Prosidy/Types/: Assoc.hs  Key.hs  Series.hs  Set.hs
src/prosidy-manual/Prosidy/: Manual.hs
src/prosidy-manual/Prosidy/Manual/: Compile.hs  Highlight.hs  Slug.hs  Version.hs
src/prosidyc/Prosidy/: Compile.hs
src/prosidyc/Prosidy/Compile/Internal/: Compile.hs  Eval.hs
test/: Paths_prosidy.hs
test/Prosidy/: Test.hs
test/Prosidy/Test/: Parse.hs  Source.hs  Types.hs
vscode/syntaxes/: prosidy.tmLanguage.json
