cabal-version: 3.0

name:                prosidy
version:             1.6.0.2
synopsis:            A simple language for writing documents.
license:             MPL-2.0
license-file:        LICENSE
author:              James Alexander Feldman-Crough
maintainer:          hello@typeclasses.com
copyright:           ©2020 to James Alexander Feldman-Crough
category:            Language
data-dir:            data
data-files:          golden/**/*.pro, golden/**/*.json
extra-source-files:  CHANGELOG.md, README.pro

description:
    Prosidy is a small language for writing documents.
    More details are on its site at https://prosidy.org.

source-repository head
    type:     git
    location: https://git.fldcr.com/prosidy/prosidy

common base
    default-language: Haskell2010
    ghc-options: -Wall -Wno-name-shadowing
    build-depends:
      , base ^>= 4.15 || ^>= 4.16 || ^>= 4.17
      , aeson ^>= 1.4 || ^>= 2.0 || ^>= 2.1
      , bytestring ^>= 0.10 || ^>= 0.11
      , containers ^>= 0.6
      , text ^>= 1.2 || ^>= 2.0

library
    import: base
    hs-source-dirs: src
    exposed-modules:
        Prosidy
        Prosidy.Optics
        Prosidy.Optics.Source
        Prosidy.Optics.Types
        Prosidy.Parse
        Prosidy.Source
        Prosidy.Types
        Prosidy.Types.Assoc
        Prosidy.Types.Key
        Prosidy.Types.Set
        Prosidy.Types.Series

    other-modules:
        Prosidy.Optics.Internal
        Prosidy.Source.LineMap
        Prosidy.Source.Units
        Prosidy.Internal.Classes
        Prosidy.Internal.JSON

    build-depends:
      , base-compat-batteries ^>= 0.11 || ^>= 0.12 || ^>= 0.13
      , binary ^>= 0.8
      , deepseq ^>= 1.4
      , hashable ^>= 1.2 || ^>= 1.3 || ^>= 1.4
      , megaparsec >= 7.0 && < 9.3
      , prettyprinter ^>= 1.6 || ^>= 1.7
      , profunctors >= 5.3  && < 5.7
      , tagged ^>= 0.8
      , transformers ^>= 0.5 || ^>= 0.6
      , vector ^>= 0.12 || ^>= 0.13
      , unordered-containers ^>= 0.2

test-suite prosidy-test
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test

    main-is:
        Prosidy/Test.hs

    other-modules:
        Prosidy.Test.Source
        Prosidy.Test.Types
        Paths_prosidy

    autogen-modules:
        Paths_prosidy

    build-depends:
      , prosidy
      , aeson-pretty ^>= 0.8
      , directory ^>= 1.3
      , filepath ^>= 1.4
      , tasty ^>= 1.2 || ^>= 1.3 || ^>= 1.4
      , tasty-ant-xml ^>= 1.1
      , tasty-golden ^>= 2.3
      , tasty-hunit ^>= 0.10
      , tasty-quickcheck ^>= 0.10
